feat: Connect real Google Gemini API for transcript summarization, smart deadline extraction, and audio multimodal processing